--- a/less/home-page.less
+++ b/less/home-page.less
@@ -37,7 +37,7 @@ body {
     width: 40%;
 
     @media @mobile {
-      display: block;
+      display: flex;
       text-align: center;
       width: 100%;
     }
@@ -48,9 +48,11 @@ body {
   //closing h1
 
   .bus {
+    display: block;
     width: 100%;
     height: auto;
-    margin: 0 auto;
+    margin-left:20%;
+    margin-right: 20%;
     border-top: 2px dashed @navigation-border;
   }
 
